Manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pievent-ingress
  namespace: hamzadevops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hamzakalech.chickenkiller.com
      secretName: myapp-tls
  rules:
    - host: hamzakalech.chickenkiller.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pievent-service
                port:
                  number: 8083

          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80

          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090

          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
